# DAG-Experiment

./: .env.example  .gitignore  README.md  Results.md  pyproject.toml
docs/superpowers/plans/: 2026-07-11-gaia-node-evaluators.md
docs/superpowers/specs/: 2026-07-11-gaia-node-evaluators-design.md
examples/: basic_pipeline.py  signed_mas_dag.py
src/dagcore/: __init__.py  errors.py  executor.py  graph.py
tests/: test_executor.py  test_graph.py  test_topology.py
