[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dagcore"
version = "0.1.0"
description = "Core / Vanilla DAG system: a generic directed acyclic graph engine with topological execution."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "DAG-Experiment" }]
keywords = ["dag", "directed-acyclic-graph", "topological-sort", "scheduler", "graph"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
